[package]
name = "btcd-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc = {path = "../rust-jsonrpc"}
json_types = {path = "../json_types"}
serde_json = "1"
serde = {version = "1", features = ["derive"]}

[features]
utreexod = []